[gd_scene load_steps=2 format=3 uid="uid://dcik5d6v05su1"]

[ext_resource type="Script" path="res://Scenes/UI/Interface/Modals/ItemHint.gd" id="1_i0fuw"]

[node name="ItemHint" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_i0fuw")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -72.0
offset_right = 148.0
offset_bottom = -13.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 132.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
offset_left = 5.0
offset_top = 3.0
offset_right = 132.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 127.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.8, 0.615686, 0.196078, 1)
theme_override_colors/font_shadow_color = Color(0.321569, 0.207843, 0.00784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "item name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 24.0
offset_right = 127.0
offset_bottom = 42.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "this is an item"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 46.0
offset_right = 127.0
offset_bottom = 66.0
size_flags_vertical = 8

[node name="Property1" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 61.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.717647, 0.72549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "flex:15"
vertical_alignment = 2

[node name="Property2" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 65.0
offset_right = 127.0
offset_bottom = 20.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.717647, 0.72549, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "vibe:25"
vertical_alignment = 2
